fix retreat card container wrapping

--- a/app/retreatcenter/book/styles.module.css
+++ b/app/retreatcenter/book/styles.module.css
@@ -47,7 +47,7 @@
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .retreatCenterCard {
